k8s/newrelic/k8s-metadata-injection-latest.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: newrelic-metadata-injection-deployment
  namespace: default
  labels:
    app: newrelic-metadata-injection
spec:
  replicas: 1
  template:
    metadata:
      namespace: default
      labels:
        app: newrelic-metadata-injection
    spec:
      serviceAccountName: newrelic-metadata-injection-service-account
      containers:
      - name: metadata-injector
        image: newrelic/k8s-metadata-injection:1.1.0
        volumeMounts:
        - name: tls-key-cert-pair
          mountPath: /etc/tls-key-cert-pair
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 1
          periodSeconds: 1
      volumes:
      - name: tls-key-cert-pair
        secret:
          secretName: newrelic-metadata-injection-secret
---
apiVersion: v1
kind: Service
metadata:
  name: newrelic-metadata-injection-svc
  namespace: default
  labels:
    app: newrelic-metadata-injection
spec:
  ports:
  - port: 443
    targetPort: 8443
  selector:
    app: newrelic-metadata-injection
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: newrelic-metadata-injection-cfg
  labels:
    app: newrelic-metadata-injection
webhooks:
- name: metadata-injection.newrelic.com
  clientConfig:
    service:
      name: newrelic-metadata-injection-svc
      namespace: default
      path: "/mutate"
    caBundle: ""
  rules:
  - operations: [ "CREATE" ]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
  # Uncomment these lines in case you want to enable the metadata decoration
  # only for pods living in namespaces labeled with 'newrelic-metadata-injection'.
  # namespaceSelector:
  #   matchLabels:
  #     newrelic-metadata-injection: enabled
  failurePolicy: Ignore
